<?xml version="1.0" encoding="UTF-8"?>
<resources>
  <string name="app_url">http://opencoinage.org/</string>
  <string name="app_email">info@opencoinage.org</string>
  <string name="app_name">OpenCoinage</string>
  <string name="app_title">OpenCoinage Wallet</string>
  <string name="app_version">x.y.z</string>
  <string name="app_date">yyyy-mm-dd</string>
  <string name="about">About</string>
  <string name="about_app_title">About OpenCoinage Wallet</string>
  <string name="amount">Amount</string>
  <string name="asset">Asset</string>
  <string name="close">Close</string>
  <string name="coin">Coin</string>
  <string name="contract">Contract</string>
  <string name="currency">Currency</string>
  <string name="denomination">Denomination</string>
  <string name="exchanger">Exchanger</string>
  <string name="issuer">Issuer</string>
  <string name="not_implemented_yet">Not implemented yet</string>
  <string name="notification_settings">Notification settings</string>
  <string name="notifications">Notifications</string>
  <string name="notifications_summary">Display money notifications in the status bar.</string>
  <string name="release">Release</string>
  <string name="select_currency">Select a currency</string>
  <string name="settings">Settings</string>
  <string name="token">Token</string>
  <string name="total">Total</string>
  <string name="unit">Unit</string>
  <string name="updating">Updating...</string>
  <string name="updated_just_now">Updated just now</string>
  <string name="updated_1_min_ago">Updated a minute ago</string>
  <string name="updated_x_mins_ago">Updated %d minutes ago</string>
  <string name="updated_1_hour_ago">Updated an hour ago</string>
  <string name="updated_x_hours_ago">Updated %d hours ago</string>
  <string name="updated_1_day_ago">Updated yesterday</string>
  <string name="updated_x_days_ago">Updated %d days ago</string>
</resources>
