<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:padding="10dip">
  <LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <LinearLayout
      android:orientation="horizontal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:paddingBottom="10dip">
      <TextView
        android:text="@string/release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
      <TextView
        android:text=" "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
      <TextView
        android:id="@+id/app_version"
        android:text="@string/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
      <TextView
        android:text=" ("
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
      <TextView
        android:id="@+id/app_date"
        android:text="@string/app_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
      <TextView
        android:text=")"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
      android:text="@string/app_url"
      android:autoLink="web"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:paddingTop="2dip"/>
    <TextView
      android:text="@string/app_email"
      android:autoLink="email"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:paddingTop="2dip"
      android:paddingBottom="20dip"/>
    <Button
      android:id="@+id/close"
      android:text="@string/close"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_alignParentBottom="true"/>
  </LinearLayout>
</ScrollView>
